# optac

./: .gitignore  README.md  pyproject.toml
optac/: __main__.py  engine.py  explorer.py  lichess.py  params.py  position_store.py  render.py  search.py  tactic.py  tactic_store.py  util.py
optac/analyse/: __init__.py  analysis.py  engine.py
optac/output/: __init__.py  html.py  template.html
tests/: test_position_store.py  test_tactic.py  test_util.py
