[project]
name = "optac"
version = "1.0.0"
authors = [{ name = "Felix Peppert", email = "felix@peppert.de" }]
description = "Discover tactics in chess openings"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.12"
dependencies = [
  "chess>=1.10.0",
  "click>=8.1.7",
  "jinja2>=3.1.4",
  "requests>=2.32.3",
  "backoff>=2.2.1",
]

[tool.pyright]
typeCheckingMode = "basic"
reportTypedDictNotRequiredAccess = false

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
